--- a/views/angular/index.html
+++ b/views/angular/index.html
@@ -12,9 +12,9 @@
 			</div>
 
 			<div class="thermo-status--inside">
-				<i class="icon-house-simple thermo-status--house-icon"></i>
+				<i class="icon-house-simple thermo-status--house-icon color-gray"></i>
 
-				<i class="icon-air-conditioner-3 thermo-status--icon thermo-status--icon-on"></i>
+				<i class="icon-air-conditioner-3 thermo-status--icon color-{{heatingOn ? 'olive' : 'gray'}}"></i>
 				<div class="thermo-status--value thermo-status--temp">
 					<i class="icon-thermometer6"></i> <span ng-bind-html="insideTemp | float"></span>
 				</div>
@@ -27,42 +27,29 @@
 
 		<div class="thermo-component thermo-target">
 			<div class="thermo-target--control">
-				<button type="button" class="thermo-target--button thermo-target--decrease">-</button>
-				<span class="thermo-target--value"><span ng-bind-html="target | float"></span> &deg;C</span>
-				<button type="button" class="thermo-target--button thermo-target--increase">+</button>
+				<button type="button" class="thermo-target--button thermo-target--decrease" ng-click="scope().tempAdjust(targetTemp._id, -0.1)">-</button>
+				<span class="thermo-target--value color-{{targetTemp.color}}"><span ng-bind-html="targetTemp.value | float"></span> &deg;C</span>
+				<button type="button" class="thermo-target--button thermo-target--increase" ng-click="scope().tempAdjust(targetTemp._id, 0.1)">+</button>
 			</div>
 		</div>
 	</div>
 
 	<div class="col-xs-12 col-sm-6 col-lg-4">
+		<h3>{{todaysPlan.plan.name}}</h3>
 		<div class="thermo-component thermo-plan">
-			<div class="thermo-plan--pointer">
-				<i class="icon-right-arrow-2" style="top: {{percentInDay}}%;"></i>
+			<div class="thermo-plan--current-time" style="top: {{percentInDay}}%;">
+				{{currentTime}}
 			</div>
 
 			<div class="thermo-plan--labels">
-				<div class="thermo-plan--label" style="top: 25%">6:00</div>
-				<div class="thermo-plan--label" style="top: 37.5%">9:00</div>
-				<div class="thermo-plan--label" style="top: 75%">18:00</div>
-				<div class="thermo-plan--label" style="top: 95.8%">23:00</div>
+				<div class="thermo-plan--label" ng-repeat="interval in todaysPlan.intervals" style="top: {{interval.labelPosition}}%">{{interval.label}}</div>
 			</div>
 
 			<div class="thermo-plan--chart clearfix">
-				<div class="thermo-plan--period thermo-plan--period-night clearfix" style="height: 25%;">
-					<i class="icon-night"></i>
+				<div class="thermo-plan--period color-{{interval.temp.color}} clearfix" style="height: {{interval.blockPosition}}%;" ng-repeat="interval in todaysPlan.intervals | filter:blockPosition">
+					<i class="{{interval.temp.iconClass}}"></i>
 				</div>
-				<div class="thermo-plan--period thermo-plan--period-home clearfix" style="height: 12.5%;">
-					<i class="icon-sun"></i>
-				</div>
-				<div class="thermo-plan--period thermo-plan--period-away clearfix" style="height: 37.5%;">
-					<i class="icon-away"></i>
-				</div>
-				<div class="thermo-plan--period thermo-plan--period-home clearfix" style="height: 20.8%;">
-					<i class="icon-sun"></i>
-				</div>
-				<div class="thermo-plan--period thermo-plan--period-night clearfix" style="height: 4.2%;">
-					<i class="icon-night"></i>
-				</div>
+				<div class="thermo-plan--pointer color-bg-{{scope().targetTemp.color}}" style="top: {{percentInDay}}%;"></div>
 			</div>
 		</div>
 	</div>
@@ -74,10 +61,10 @@
 				<div class="thermo-temps--temp col-xs-6 col-lg-12" ng-repeat="temp in temps">
 					<div class="color-{{temp.color}}">
 						<i class="{{temp.iconClass}}"></i> <span class="thermo-temps--temp-name">{{temp.name}}</span>
-						<div class="thermo-temps--temp-control">
-							<button type="button" class="thermo-temps--temp-button thermo-temps--temp--decrease">-</button>
+						<div class="thermo-temps--temp-control" data-id="{{temp._id}}">
+							<button type="button" class="thermo-temps--temp-button thermo-temps--temp--decrease" ng-click="scope().tempAdjust(temp._id, -0.1)">-</button>
 							<span class="thermo-temps--temp-value"><span ng-bind-html="temp.value | float"></span> &deg;C</span>
-							<button type="button" class="thermo-temps--temp-button thermo-temps--temp--increase">+</button>
+							<button type="button" class="thermo-temps--temp-button thermo-temps--temp--increase" ng-click="scope().tempAdjust(temp._id, 0.1)">+</button>
 						</div>
 					</div>
 				</div>
