--- a/assets/scss/termo-plan.scss
+++ b/assets/scss/termo-plan.scss
@@ -1,5 +1,5 @@
 .thermo-plan {
-	height: 400px;
+	height: 360px;
 	max-width: 250px;
 	margin: 0 auto;
 }
@@ -24,7 +24,7 @@
 	border-top-width: 0;
 
 	i {
-		font-size: 30px;
+		font-size: 3rem;
 	}
 
 	&:first-child {
