--- a/assets/scss/termo-status.scss
+++ b/assets/scss/termo-status.scss
@@ -4,23 +4,23 @@
 }
 
 .thermo-status--house-icon {
-	font-size: 240px;
+	font-size: 25rem;
 	font-weight: 100;
 }
 
 .thermo-status--icon {
 	position: absolute;
-	left: 96px;
+	left: 103px;
 	top: 30px;
-	font-size: 45px;
+	font-size: 4.5rem;
 }
 
 .thermo-status--value {
-	font-size: 35px;
+	font-size: 3.5rem;
 	font-weight: bold;
 
 	i {
-		font-size: 30px;
+		font-size: 3rem;
 	}
 }
 
@@ -30,31 +30,27 @@
 
 	.thermo-status--value {
 		position: absolute;
-		left: 67px;
+		left: 74px;
 	}
 
 	.thermo-status--temp {
-		top: 90px;
-		color: $orange;
+		top: 100px;
+		color: $red;
 	}
 
 	.thermo-status--humi {
 		color: $teal;
-		top: 160px;
+		top: 170px;
 	}
 }
 
 .thermo-status--outside {
 	display: inline-block;
-	font-size: 25px;
+	font-size: 2.5rem;
 	padding-right: 10px;
 
-	.decimal {
-		font-size: 15px;
-	}
-
 	i {
-		font-size: 30px;
+		font-size: 3rem;
 	}
 
 	.thermo-status--temp {
