--- a/assets/scss/termo-target.scss
+++ b/assets/scss/termo-target.scss
@@ -13,7 +13,7 @@
 .thermo-target--button {
 	border: 0;
 	background: none;
-	font-size: 50px;
+	font-size: 5rem;
 	vertical-align: middle;
 	color: $gray;
 	padding: 0 30px;
@@ -36,7 +36,7 @@
 }
 
 .thermo-target--value {
-	font-size: 50px;
+	font-size: 5rem;
 	font-weight: bold;
 	vertical-align: middle;
 }
