--- a/assets/scss/termo-temps.scss
+++ b/assets/scss/termo-temps.scss
@@ -1,13 +1,17 @@
 .thermo-temps--temp {
-	font-size: 20px;
+	font-size: 2rem;
 	text-align: center;
 	margin-bottom: 20px;
 	font-weight: bold;
 	vertical-align: middle;
 
 	i {
-		font-size: 25px;
+		font-size: 2.5rem;
 		vertical-align: middle;
+	}
+
+	.decimal {
+		font-size: 0.7em;
 	}
 }
 
