--- a/assets/main.scss
+++ b/assets/main.scss
@@ -9,6 +9,7 @@
 @import './scss/termo-plan';
 @import './scss/thermo-default-plans';
 @import './scss/termo-temps';
+@import './scss/thermo-select-plan-modal';
 
 * {
 	outline: 0;
@@ -25,10 +26,14 @@
 	font-family: 'Jura';
 }
 
+html {
+	font-size: 65%;
+}
+
 body {
 	background-color: #f5f5f5;
 	font-family: 'Jura';
-	font-size: 65%;
+	font-size: 1.6rem;
 }
 
 .clearfix:after {
