Fix status layout on mobile. Add calendar.

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -11,6 +11,8 @@
 @import './scss/termo-temps';
 @import './scss/thermo-select-plan-modal';
 
+@import './scss/responsive-calendar';
+
 * {
 	outline: 0;
 }
