Show individual sensor information in the right place.

--- a/views/angular/index.html
+++ b/views/angular/index.html
@@ -55,7 +55,7 @@
 		</div>
 	</div>
 
-	<div class="col-xs-12">
+	<div class="col-xs-12 col-lg-4">
 		<div class="thermo-component thermo-room-temps">
 			<div ng-repeat="(id, data) in inside.individual">
 				<div>
