Use nicer weather icons.

--- a/views/angular/index.html
+++ b/views/angular/index.html
@@ -3,7 +3,7 @@
 		<div class="thermo-component thermo-status">
 			<div class="thermo-status--outside">
 				<div class="thermo-status--weather">
-					<img src="{{outside.weatherIconUrl}}" />
+					<i class="{{outside.weatherIconClass}}"></i>
 				</div>
 
 				<div class="thermo-status--value thermo-status--temp">
