Show both the label and id for room status.

--- a/views/angular/index.html
+++ b/views/angular/index.html
@@ -63,7 +63,7 @@
 		<div class="thermo-component thermo-room-temps">
 			<div ng-repeat="(id, data) in inside.individual">
 				<div class="color-{{data.active ? 'green' : 'red'}}">
-					<div class="thermo-room--label">{{id}}</div>
+					<div class="thermo-room--label">{{roomIdToLabel[id] || id}} ({{id}})</div>
 					<i class="icon-thermometer6"></i> <span ng-bind-html="data.temperature | float"></span> <i class="icon-humidity"></i> {{data.humidity}}
 				</div>
 			</div>
