--- a/views/angular/index.html
+++ b/views/angular/index.html
@@ -71,6 +71,10 @@
 	</div>
 
 	<div class="col-xs-12">
+		<canvas id="heatingHistoryChart" width="600" height="200"></canvas>
+	</div>
+
+	<div class="col-xs-12">
 		<div class="thermo-component">
 			<h2>Temperature settings</h2>
 			<div class="thermo-temps row">
