--- a/views/layout.handlebars
+++ b/views/layout.handlebars
@@ -16,6 +16,8 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.0/angular.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.0/angular-route.js"></script>
 
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.bundle.min.js"></script>
+
 		<script src="{{assetsBasePath}}/build/main.js"></script>
 	</head>
 	<body>
